<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="124dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/register"
        android:textColor="#F44336"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:text="@string/register"
        android:textColorLink="#A15C5C"
        app:layout_constraintEnd_toEndOf="@+id/go_to_login"
        app:layout_constraintTop_toBottomOf="@+id/go_to_login" />

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/go_to_login"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="84dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="346dp"
        android:layout_height="491dp"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="43dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/go_to_login"
        app:layout_constraintStart_toStartOf="@+id/LoginText"
        app:layout_constraintTop_toTopOf="@+id/LoginText">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/UsernameLayout"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="113dp">

            <EditText
                android:id="@+id/UserNameInput"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:ems="10"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/NameLayout"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="176dp">

            <EditText
                android:id="@+id/NameInput"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/FirstNameLayout"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="238dp">

            <EditText
                android:id="@+id/FirstNameInput"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/firstname"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailLayout"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="300dp">

            <EditText
                android:id="@+id/EmailInput"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:autofillHints="example@mail.com"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/AgeLayout"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="360dp">

            <EditText
                android:id="@+id/AgeInput"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/age"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="422dp">

            <EditText
                android:id="@+id/PasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>