<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="124dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="7dp"
        android:text="@string/login"
        android:textColor="#F44336"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textColorLink="#A15C5C"
        app:layout_constraintEnd_toEndOf="@+id/go_to_register"
        app:layout_constraintTop_toBottomOf="@+id/go_to_register" />

    <TextView
        android:id="@+id/go_to_register"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="27dp"
        android:text="@string/not_yet_registered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/go_to_restaurants"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="183dp"
        android:layout_height="24dp"
        android:layout_gravity="end"
        android:layout_marginBottom="88dp"
        android:text="Continue without login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="36dp"
        android:layout_marginTop="47dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="168dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/go_to_register"
        app:layout_constraintStart_toStartOf="@+id/LoginText"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailLayout"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="300dp">

            <EditText
                android:id="@+id/EmailInput"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:autofillHints="example@mail.com"
                android:ems="10"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="422dp">

            <EditText
                android:id="@+id/PasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>